# slidemaker

./: .makim.yaml  .pre-commit-config.yaml  .prettierignore  .releaserc.json  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  template_anchor_map.yaml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
changelog/: index.html
commands/: index.html
conda/: dev.yaml
contributing/: index.html
docs/: changelog.md  commands.md  contributing.md  getting-started.md  index.md  manifest.md
getting-started/: index.html
manifest/: index.html
search/: search_index.json
src/slidemaker/: __init__.py  anchors.py  cli.py  core.py  main.py  media.py  template.py
tests/: _util.py  conftest.py  test_build.py  test_cli.py  test_core_helpers.py  test_core_layout.py  test_core_pptx.py  test_media.py  test_rich.py
tests/data/: template.pptx
