[tool.poetry]
name = "slidemaker"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "slidemaker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
python-pptx = ">=1"

[tool.poetry.scripts]
slidemaker = "slidemaker.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "makim (>=1.29.0)",
    "pytest (>=9.0.2)",
    "pre-commit (>=4.5.1)",
    "vulture (>=2.15)",
    "ruff (>=0.15.5)",
    "mypy (>=1.19.1)",
    "douki (>=0.11.0)",
    "mkdocs (>=1.3)",
    "mkdocs-exclude (>=1.0.2)",
    "mkdocs-jupyter (>=0.24.7)",
    "mkdocs-literate-nav (>=0.4.1)",
    "mkdocs-macros-plugin (>=0.6.3)",
    "mkdocs-material (>=8)",
    "mkdocstrings[python] (>=0.19.0)",
    "mkdocstrings-python (<2)",
    "mkdocs-gen-files (>=0.5.0)",
]
